I lost some stuff in world, now u can find it

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -15,3 +15,6 @@ commands:
   coins:
     usage: /<command> [help]
     permission-message: §cYou can't execute this command
+
+  sell:
+    usage: /<command>
