--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -18,3 +18,11 @@ commands:
 
   sell:
     usage: /<command>
+
+  genslots:
+    aliases:
+      - generatorslots
+
+    permission: generators.admin
+    permission-message: §cYou can't execute this command
+    usage: /<command> <type> <player> <amount>
